syntax = "proto3";

package car_service;

message UserRole {
  int32 user_id = 1;
  int32 role_id = 2;
}
